Fix CSS conflicts: remove old profile styles from _home.scss
The old flexbox row layout in _home.scss was conflicting with
the new centered layout in _enhancements.scss, causing elements
to overlap and display incorrectly.

Removed conflicting profile-section and social-links styles from
_home.scss since they're now handled in _enhancements.scss.

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,112 +1,7 @@
 // Home page styles
+// Note: Main home styling is in _enhancements.scss to avoid conflicts
 
-// Profile section
-.profile-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin-bottom: $double-spacing;
-  
-  @media (min-width: $tablet-width) {
-    flex-direction: row;
-    text-align: left;
-    align-items: flex-start;
-  }
-  
-  .profile-image {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-bottom: $base-spacing;
-    box-shadow: $box-shadow;
-    
-    @media (min-width: $tablet-width) {
-      margin-right: $double-spacing;
-      margin-bottom: 0;
-    }
-  }
-  
-  .profile-content {
-    flex: 1;
-    
-    .profile-title {
-      margin-top: 0;
-      font-size: 2rem;
-      color: $primary-color;
-    }
-    
-    .profile-subtitle {
-      font-size: 1.2rem;
-      color: $dark-gray;
-      margin-bottom: $base-spacing;
-    }
-    
-    .profile-bio {
-      margin-bottom: $base-spacing;
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
-  }
-}
-
-// Social links
-.social-links {
-  display: flex;
-  justify-content: center;
-  margin: $base-spacing 0;
-  
-  @media (min-width: $tablet-width) {
-    justify-content: flex-start;
-  }
-  
-  .social-link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    margin-right: $base-spacing;
-    background-color: $light-gray;
-    color: $primary-color;
-    transition: background-color $transition-speed $transition-timing, 
-                color $transition-speed $transition-timing,
-                transform $transition-speed $transition-timing;
-    
-    &:hover, &:focus {
-      background-color: $primary-color;
-      color: white;
-      transform: translateY(-3px);
-      text-decoration: none;
-    }
-    
-    &:active {
-      transform: translateY(1px);
-    }
-    
-    svg {
-      width: 24px;
-      height: 24px;
-    }
-    
-    &.github:hover, &.github:focus {
-      background-color: #24292e;
-    }
-    
-    &.linkedin:hover, &.linkedin:focus {
-      background-color: #0077b5;
-    }
-    
-    &.twitter:hover, &.twitter:focus {
-      background-color: #1da1f2;
-    }
-    
-    &.email:hover, &.email:focus {
-      background-color: $accent-color;
-    }
-  }
-}
+// Social links styling is in _enhancements.scss
 
 // Latest post section
 .latest-post-section {
